SUBDIRS = include library debian bindings example

ACLOCAL_AMFLAGS = -I config
AUTOMAKE_OPTIONS = 1.9 foreign

EXTRA_DIST = autogen.sh AUTHORS .gitignore \
	     config/ac_c_bigendian_cross.m4 \
	     config/ac_check_atomic.m4 \
	     config/ac_check_largefile.m4 \
	     config/ac_id_size.m4 \
	     config/acsetup.h \
	     config/acx_pthread.m4 \
	     config/ax_check_compiler_flags.m4 \
	     config/ax_check_openssl.m4 \
	     config/ax_create_stdint_h.m4 \
	     config/ax_prefix_config_h.m4 \
	     config/ac_set_releaseinfo_versioninfo.m4
